# Phys607_project3

./: 1D mcmc practice.ipynb  README.md  practice.py  pyproject.toml  requirements.txt  shelf_method-1D.ipynb  shelf_method.ipynb
src/: create_data.py  main.py  mcmc.py  parameter.h5  testing.py
src/data/: create_data.py  data.h5
src/estimator/: main.py  mcmc.py
